--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -8,3 +8,6 @@ lexer = { path = "../lexer" }
 log = "0.4.27"
 simple_logger = "5.0.0"
 downcast-rs = "2.0.1"
+derive_more = { version = "2.0.1", features = ["display"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
