--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2024"
 [dependencies]
 lexer = { path = "../lexer" }
 log = "0.4.27"
-simple_logger = "5.0.0"
-downcast-rs = "2.0.1"
-derive_more = { version = "2.0.1", features = ["display"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+derive_more = { version = "2.0.1", features = ["display"] }
+
+[dev-dependencies]
+serial_test = "3.2.0"
+
+[features]
+default = ["indent-log", "run-serial-test"]
+indent-log = []
+run-serial-test = []
