--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -14,6 +14,7 @@ derive_more = { version = "2.0.1", features = ["display"] }
 serial_test = "3.2.0"
 
 [features]
-default = ["indent-log"]
-indent-log = []
-serial = []
+#default = ["indent-log"]
+default = []
+indent-log = ["serial-test"]
+serial-test = []
